🔥 Updated: Sharai Khana docs class section.

--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -1290,12 +1290,12 @@
                           <p><b>Custom List Style:</b></p>
                           <ul>
                             <li>
-                              <b>Default Bullet List:</b>
+                              <b>Default Bullet List (Square):</b>
                               <i>custom-bullet-list</i>
                             </li>
                             <li>
-                              <b>Square Bullet List:</b>
-                              <i>custom-bullet-list custom-bullet-list__square</i>
+                              <b>Circle Bullet List:</b>
+                              <i>custom-bullet-list custom-bullet-list__circle</i>
                             </li>
                             <li>
                               <b>Diamond Bullet List:</b>
