🔥 Updated: Sharai Khana docs class section.

--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -1220,6 +1220,27 @@
                           <b>Section Black Overlay(50% Opacity):</b>
                           <i>section-black-50-overlay</i>
                         </li>
+
+                        <li>
+                          <b>Section Background right-center:</b>
+                          <i>section-bg--right-center</i>
+                        </li>
+
+                        <li>
+                          <b>Section Background right-bottom:</b>
+                          <i>section-bg--right-bottom</i>
+                        </li>
+
+                        <li>
+                          <b>Section Background left-center:</b>
+                          <i>section-bg--left-center</i>
+                        </li>
+
+                        <li>
+                          <b>Section Background left-bottom:</b>
+                          <i>section-bg--left-bottom</i>
+                        </li>
+
                         <li>
                           <b>No Padding Between Columns:</b>
                           <i>no-gutter</i>
@@ -1485,20 +1506,22 @@
 
                       <ul>
                         <li>
-                          <b>Navigation Booking Button Class:</b>
+                          <b>Navigation Booking Button:</b>
                           <i>btn-nav-booking</i>
                         </li>
                         <li>
-                          <b>Link Button Class:</b>
+                          <b>Link Button:</b>
                           <i>btn-theme</i>
                         </li>
                         <li>
-                          <b>Link Inverted Button ( Dark Background ) Class:</b>
+                          <b>Link Inverted Button ( Dark Background ):</b>
                           <i>btn-theme btn-theme-invert</i>
                         </li>
                         <li>
-                          <b>Link Small Button Class:</b>
+                          <b>Small Button:</b>
                           <i>btn-theme-small</i>
+                          <strong>Or</strong>
+                          <i>btn-theme--sm</i>
                         </li>
                         <li>
                           <b>Link Square Button Class:</b>
@@ -1511,6 +1534,18 @@
                         <li>
                           <b>Capitalize Button Text Class:</b>
                           <i>btn-capitalize</i>
+                        </li>
+                        <li>
+                          <b>Large Layout:</b>
+                          <i>btn-theme--lg</i>
+                        </li>
+                        <li>
+                          <b>Rounded Layout:</b>
+                          <i>btn-theme--rounded</i>
+                        </li>
+                        <li>
+                          <b>Semi-Rounded Layout:</b>
+                          <i>btn-theme--semi-rounded</i>
                         </li>
                       </ul>
 
