🔥 Updated: Kdesk WP Theme doc.

--- a/appeal/petitions_manager/index.html
+++ b/appeal/petitions_manager/index.html
@@ -604,9 +604,31 @@
 
                   <ul class="square-list">
                     <li>
-                      <p>Display External Form:
-                      </p>
+                      <h4>External Form:</h4>
                       <pre class="language-markup"><code> [bptm_external_form /]</code></pre>
+                    </li>
+
+                    <li>
+                      <h4>Petition About Us:</h4>
+                      <pre class="language-markup"><code> [petition_about id="123" hide_image="0" layout="layout_1" bptm_extra_class=""/]</code>
+                      </pre>
+                      <div class="doc-img-box">
+                        <a href="img/shortcodes/result/about.jpg" class="venobox">
+                          <img class="img-fluid" src="img/shortcodes/about/about.jpg" alt="Petition about" />
+                        </a>
+                      </div>
+                    </li>
+
+                    <li>
+                      <h4>Petition Result:</h4>
+                      <pre class="language-markup"><code> [petition_about id="123" hide_image="0" layout="layout_1" bptm_extra_class=""/]</code>
+                      </pre>
+
+                      <div class="doc-img-box">
+                        <a href="img/shortcodes/result/result.jpg" class="venobox">
+                          <img class="img-fluid" src="img/shortcodes/result/result.jpg" alt="Petition Result" />
+                        </a>
+                      </div>
                     </li>
                   </ul>
                 </div>
