🔥 Updated: Sharai Khana doc.

--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -1189,24 +1189,36 @@
 
                       <ul>
                         <li>
-                          <b>Section Default:</b>
-                          <i>section-content-block</i>
+                          <b>Section Default</b>
+                          <small>(100px padding on top and bottom)</small>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>section-content-block</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Minimal Section Content Block:</b>
-                          <i>section-content-block-minimal</i>
+                          <b>Minimal Section Content Block</b>
+                          <small>(50px padding on top and bottom)</small>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>section-content-block-minimal</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Section Pure White Background:</b>
-                          <i>section-pure-white-bg</i>
+                          <b>Section Pure White Background</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>section-pure-white-bg</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Section Secondary Background:</b>
-                          <i>section-secondary-bg</i>
+                          <b>Section Secondary Background</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>section-secondary-bg</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Section Primary Background:</b>
-                          <i>section-primary-overly-bg</i>
+                          <b>Section Primary Background</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>section-primary-overly-bg</code></pre>
+                          </p>
                         </li>
                         <li>
                           <b>Section Black Overlay(70% Opacity):</b>
@@ -1263,16 +1275,25 @@
                           <i>horizontal-newsletter-square-layout</i>
                         </li>
                         <li>
-                          <b>Horizontal Newsletter With Square Button(Alternative):</b>
-                          <i>horizontal-newsletter-square-layout-alt</i>
+                          <b>Horizontal Newsletter With Square Button(Alternative)</b>
+                          <p>
+                          <pre
+                            class="prettyprint lang-css linenums"><code>horizontal-newsletter-square-layout-alt</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Horizontal Newsletter With Semi Rounded Button:</b>
-                          <i>horizontal-newsletter-semi-rounded-layout</i>
+                          <b>Horizontal Newsletter With Semi Rounded Button</b>
+                          <p>
+                          <pre
+                            class="prettyprint lang-css linenums"><code>horizontal-newsletter-semi-rounded-layout</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Horizontal Newsletter With Semi Rounded Button(Alternative):</b>
-                          <i>horizontal-newsletter-semi-rounded-layout-alt</i>
+                          <b>Horizontal Newsletter With Semi Rounded Button(Alternative)</b>
+                          <p>
+                          <pre
+                            class="prettyprint lang-css linenums"><code>horizontal-newsletter-semi-rounded-layout-alt</code></pre>
+                          </p>
                         </li>
                       </ul>
 
@@ -1280,32 +1301,46 @@
 
                       <ul>
                         <li>
-                          <b>Light(White) Text Color:</b>
-                          <i>text-light-color</i>
+                          <b>Light(White) Text Color</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>text-light-color</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Dark(Black) Text Color:</b>
-                          <i>text-dark-color</i>
+                          <b>Dark(Black) Text Color</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>text-dark-color</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Text Highlight(Primary) Color:</b>
-                          <i>text-highlighter-primary</i>
+                          <b>Text Highlight(Primary) Color</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>text-highlighter-primary</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Add Text Shadow:</b>
-                          <i>theme-custom-text-shadow</i>
+                          <b>Add Text Shadow</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>theme-custom-text-shadow</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Text Capitalization:</b>
-                          <i>text-capitalize</i>
+                          <b>Text Capitalization</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>text-capitalize</code></pre>
+                          </p>
                         </li>
                         <li>
                           <b>Text Font Weight Light(Weight: 500)</b>
-                          <i>text-font-weight-light</i>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>text-font-weight-light</code></pre>
+                          </p>
                         </li>
                         <li>
                           <b>Testimonial Text(Normal):</b>
-                          <i>testimony-normal-text</i>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>testimony-normal-text</code></pre>
+                          </p>
                         </li>
                         <li>
                           <p><b>Custom List Style:</b></p>
@@ -1554,15 +1589,45 @@
                       <ul>
                         <li>
                           <b>No Padding In Left:</b>
-                          <i>padding-left-0</i>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>padding-left-0</code></pre>
+                          </p>
                         </li>
                         <li>
                           <b>No Padding In Right:</b>
-                          <i>padding-right-0</i>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>padding-right-0</code></pre>
+                          </p>
                         </li>
                         <li>
-                          <b>Padding 4px All Round:</b>
-                          <i>padding-all-4</i>
+                          <b>Padding 4px (All):</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>padding-all-4</code></pre>
+                          </p>
+                        </li>
+                        <li>
+                          <b>Padding 6px (All):</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>padding-6</code></pre>
+                          </p>
+                        </li>
+                        <li>
+                          <b>Padding 12px (All):</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>padding-12</code></pre>
+                          </p>
+                        </li>
+                        <li>
+                          <b>Padding 16px (All):</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>padding-16</code></pre>
+                          </p>
+                        </li>
+                        <li>
+                          <b>Padding 24px (All):</b>
+                          <p>
+                          <pre class="prettyprint lang-css linenums"><code>padding-24</code></pre>
+                          </p>
                         </li>
                       </ul>
 
